// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductDetails matches snapshot (loaded in-stock product) 1`] = `
<View
  style={
    {
      "backgroundColor": "#f8f9fa",
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f8f8f8",
            "height": 600,
            "justifyContent": "center",
            "marginTop": 15,
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "uri": "https://example.com/img.jpg",
            }
          }
          style={
            [
              {
                "height": "100%",
                "width": "100%",
              },
              {
                "borderRadius": 10,
                "height": "100%",
                "overflow": "hidden",
                "width": "80%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          {
            "padding": 16,
            "paddingBottom": 100,
          }
        }
      >
        <Text
          style={
            {
              "color": "#666",
              "fontSize": 16,
              "marginBottom": 4,
            }
          }
        >
          BrandCo
        </Text>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 12,
            }
          }
        >
          Phone X
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 24,
                "fontWeight": "bold",
              }
            }
          >
            $
            999.99
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Ionicons
              color="#FFD700"
              name="star"
              size={16}
            />
            <Text
              style={
                {
                  "color": "#666",
                  "fontWeight": "500",
                  "marginLeft": 4,
                  "marginRight": 8,
                }
              }
            >
              4.5
            </Text>
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 12,
                }
              }
            >
              (
              12
               reviews)
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#eee",
              "height": 1,
              "marginVertical": 16,
            }
          }
        />
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Description
        </Text>
        <Text
          style={
            {
              "color": "#666",
              "fontSize": 14,
              "lineHeight": 22,
              "marginBottom": 20,
            }
          }
        >
          Great phone
        </Text>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Quantity
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 24,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#ddd",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "width": 40,
              }
            }
          >
            <Ionicons
              color="#333"
              name="remove"
              size={20}
            />
          </View>
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "500",
                "marginHorizontal": 16,
                "minWidth": 24,
                "textAlign": "center",
              }
            }
          >
            1
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#ddd",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "width": 40,
              }
            }
          >
            <Ionicons
              color="#333"
              name="add"
              size={20}
            />
          </View>
          <Text
            style={
              {
                "color": "#666",
                "fontSize": 14,
                "marginLeft": 16,
              }
            }
          >
            5
             available
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Specifications
        </Text>
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "borderRadius": 8,
              "marginBottom": 16,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Category
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              phones
            </Text>
          </View>
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Weight
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              0.5 kg
            </Text>
          </View>
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Dimensions
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              10 x 10 x 5 cm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "borderTopColor": "#eee",
        "borderTopWidth": 1,
        "bottom": 0,
        "left": 0,
        "padding": 16,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#007AFF",
          "borderRadius": 8,
          "marginTop": 20,
          "opacity": 1,
          "padding": 15,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Add to Cart
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProductDetails matches snapshot (out of stock) 1`] = `
<View
  style={
    {
      "backgroundColor": "#f8f9fa",
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f8f8f8",
            "height": 600,
            "justifyContent": "center",
            "marginTop": 15,
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            {
              "uri": "https://example.com/img.jpg",
            }
          }
          style={
            [
              {
                "height": "100%",
                "width": "100%",
              },
              {
                "borderRadius": 10,
                "height": "100%",
                "overflow": "hidden",
                "width": "80%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          {
            "padding": 16,
            "paddingBottom": 100,
          }
        }
      >
        <Text
          style={
            {
              "color": "#666",
              "fontSize": 16,
              "marginBottom": 4,
            }
          }
        >
          BrandCo
        </Text>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 24,
              "fontWeight": "bold",
              "marginBottom": 12,
            }
          }
        >
          Phone X
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 24,
                "fontWeight": "bold",
              }
            }
          >
            $
            999.99
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Ionicons
              color="#FFD700"
              name="star"
              size={16}
            />
            <Text
              style={
                {
                  "color": "#666",
                  "fontWeight": "500",
                  "marginLeft": 4,
                  "marginRight": 8,
                }
              }
            >
              4.5
            </Text>
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 12,
                }
              }
            >
              (
              12
               reviews)
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "#eee",
              "height": 1,
              "marginVertical": 16,
            }
          }
        />
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Description
        </Text>
        <Text
          style={
            {
              "color": "#666",
              "fontSize": 14,
              "lineHeight": 22,
              "marginBottom": 20,
            }
          }
        >
          Great phone
        </Text>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Quantity
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 24,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#ddd",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "width": 40,
              }
            }
          >
            <Ionicons
              color="#333"
              name="remove"
              size={20}
            />
          </View>
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "500",
                "marginHorizontal": 16,
                "minWidth": 24,
                "textAlign": "center",
              }
            }
          >
            1
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderColor": "#ddd",
                "borderRadius": 20,
                "borderWidth": 1,
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "width": 40,
              }
            }
          >
            <Ionicons
              color="#333"
              name="add"
              size={20}
            />
          </View>
          <Text
            style={
              {
                "color": "#666",
                "fontSize": 14,
                "marginLeft": 16,
              }
            }
          >
            0
             available
          </Text>
        </View>
        <Text
          style={
            {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          Specifications
        </Text>
        <View
          style={
            {
              "backgroundColor": "#f9f9f9",
              "borderRadius": 8,
              "marginBottom": 16,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Category
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              phones
            </Text>
          </View>
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Weight
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              0.5 kg
            </Text>
          </View>
          <View
            style={
              {
                "borderBottomColor": "#eee",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingVertical": 8,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#888",
                  "fontSize": 14,
                }
              }
            >
              Dimensions
            </Text>
            <Text
              style={
                {
                  "color": "#333",
                  "fontSize": 14,
                  "fontWeight": "500",
                }
              }
            >
              10 x 10 x 5 cm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "borderTopColor": "#eee",
        "borderTopWidth": 1,
        "bottom": 0,
        "left": 0,
        "padding": 16,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#a5a5a5",
          "borderRadius": 8,
          "marginTop": 20,
          "opacity": 0.6,
          "padding": 15,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Out of Stock
      </Text>
    </View>
  </View>
</View>
`;
